--- a/privacy.html
+++ b/privacy.html
@@ -165,6 +165,9 @@
 
         <h3>第4条（ブラウザへの記録について）</h3>
         <p>当研究所の特定の実験棟（第2研究所等）では、利便性向上および研究目的のため、ユーザーの入力情報や挙動をブラウザの「localStorage」に記録する場合があります。これらのデータはユーザーの端末内にみ保存され、所長が直接サーバー等へ収集することはありません。ユーザーはブラウザのキャッシュを消去することで、これらの記録をいつでも抹消することが可能です。</p>
+
+        <h3>第5条 (掲示板への書き込みについて）</h3>
+        <p>本サイトの掲示板に入力された情報は、Google Firebase を通じて保存されます。そして、すべてのアクセス者や所長（なおま）に公開されます。また、公序良俗に反する内容は、管理者の裁定（パージ）により予告なく消去される場合がございます。</p>
     </div>
 
     <div class="section-box">
