--- a/info.html
+++ b/info.html
@@ -117,7 +117,7 @@
         <div class="news-box">
             <h3 style="margin: 0 0 15px 0;">🔐 研究所通達</h3>
             <ul style="list-style: none; padding: 0; line-height: 2; font-size: 15px;">
-                <li><h1>・2026-02-23：現在大きなニュースはありません。</h1></li>
+                <li><h1>・2026-02-23：第１研究所に誰でも書き込み可能な掲示板を作成しました。</h1></li>
                 <li>・2026-02-23：サイト名確定へ向け申請</li>
                 <li>・2026-02-23：バグ（問題）報告フォームを作成</li>
                 <li>・2026-02-22：googleにsitemapを提出</li>
