--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <meta name="description" content="なおまが運営する、VercelとGitHubを駆使した技術検証用サイト。ここでは日々、新たな術が開発されている。">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-HN6YC5TWWS"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VBTG2MXGGX"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-HN6YC5TWWS');
+  gtag('config', 'G-VBTG2MXGGX');
 </script>
     <script type="application/ld+json">
 {
