--- a/kenkyu-2.html
+++ b/kenkyu-2.html
@@ -24,13 +24,13 @@
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-HN6YC5TWWS"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VBTG2MXGGX"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-HN6YC5TWWS');
+  gtag('config', 'G-VBTG2MXGGX');
 </script>
     <style>
         body { background: #000; color: #0f0; font-family: 'Consolas', monospace; padding: 50px; text-align: center; }
