--- a/info.html
+++ b/info.html
@@ -24,13 +24,13 @@
 }
 </script>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-HN6YC5TWWS"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VBTG2MXGGX"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-HN6YC5TWWS');
+  gtag('config', 'G-VBTG2MXGGX');
 </script>
     <style>
         :root {
