--- a/404.html
+++ b/404.html
@@ -6,13 +6,13 @@
     <meta name="robots" content="noindex, nofollow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-HN6YC5TWWS"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VBTG2MXGGX"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-HN6YC5TWWS');
+  gtag('config', 'G-VBTG2MXGGX');
 </script>
     <style>
         body { background: #000; color: #f85149; font-family: 'Consolas', monospace; text-align: center; padding-top: 100px; overflow: hidden; }
