--- a/403.html
+++ b/403.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>なおまの研究所 - 403</title>
     <meta name="robots" content="noindex, nofollow">
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HN6YC5TWWS"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VBTG2MXGGX"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-HN6YC5TWWS');
+      gtag('config', 'G-VBTG2MXGGX');
     </script>
     <style>
         body {
