--- a/kenkyu-2.html
+++ b/kenkyu-2.html
@@ -51,6 +51,7 @@
     z-index: 1000;
     border-bottom: 1px solid rgba(88, 166, 255, 0.2);
     transition: background-color 0.3s !important;
+    margin-bottom: 50px !important; 
 }
 
 .research-nav a {
