--- a/index.html
+++ b/index.html
@@ -615,5 +615,14 @@
             manaBtn.addEventListener('touchend', stopMagic);
         }
     </script>
+        <script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('/sw.js')
+        .then(reg => console.log('門番、登録完了！！', reg))
+        .catch(err => console.log('門番、登録失敗……', err));
+    });
+  }
+</script>
 </body>
 </html>
