--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="なおまが運営する、VercelとGitHubを駆使した技術検証用サイト。ここでは日々、新たな術が開発されている。">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="manifest" href="/manifest.json">
+    <link rel="icon" href="/icon-192.png" type="image/png">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-VBTG2MXGGX"></script>
 <script>
