--- a/info-of-naoma.html
+++ b/info-of-naoma.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Naoma Lab news</title>
+    <link rel="manifest" href="/manifest.json">
+    <link rel="icon" href="/icon-512.png" type="image/png">
     <meta name="robots" content="noindex, nofollow"> <style>
         :root { --bg: #0d1117; --text: #c9d1d9; --accent: #58a6ff; --box-bg: #161b22; }
         body { background: var(--bg); color: var(--text); font-family: monospace; padding: 50px; text-align: center; }
