--- a/kenkyu-2.html
+++ b/kenkyu-2.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>なおまの第２研究所</title>
+    <link rel="manifest" href="/manifest.json">
+    <link rel="icon" href="/icon-512.png" type="image/png">
     <meta name="robots" content="index, follow">
     <meta name="description" content="ここは第２研究所だ。">
     <script type="application/ld+json">
