--- a/privacy.html
+++ b/privacy.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>なおまの研究所 - 規約・ポリシー</title>
+    <link rel="manifest" href="/manifest.json">
+    <link rel="icon" href="/icon-512.png" type="image/png">
     <meta name="description" content="利用規約とプライバシーポリシーを掲載しています。">
 
     <script type="application/ld+json">
