--- a/404.html
+++ b/404.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>なおまの研究所 - 404</title>
+    <link rel="manifest" href="/manifest.json">
+    <link rel="icon" href="/icon-512.png" type="image/png">
     <meta name="robots" content="noindex, nofollow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Google tag (gtag.js) -->
