--- a/kenkyu-2.html
+++ b/kenkyu-2.html
@@ -6,7 +6,7 @@
     <link rel="manifest" href="/manifest.json">
     <link rel="icon" href="/icon-512.png" type="image/png">
     <meta name="robots" content="index, follow">
-    <meta name="description" content="ここは第２研究所だ。">
+    <meta name="description" content="ここはなおまの第２研究所。こちらもよろしくお願いします！">
     <script type="application/ld+json">
 {
   "@context": "https://schema.org",
