--- a/kenkyu-2.html
+++ b/kenkyu-2.html
@@ -6,7 +6,7 @@
     <link rel="manifest" href="/manifest.json">
     <link rel="icon" href="/icon-512.png" type="image/png">
     <meta name="robots" content="index, follow">
-    <meta name="description" content="ここはなおまの第２研究所。こちらもよろしくお願いします！">
+    <meta name="description" content="JavaScriptによるマウス追跡やキーログ保存、アクセス端末の解析などを行う『なおまの第2研究所』。ブラウザの限界に挑む技術デモを公開中。">
     <script type="application/ld+json">
 {
   "@context": "https://schema.org",
