--- a/info.html
+++ b/info.html
@@ -5,7 +5,8 @@
     <title>なおまの研究所 - お知らせ</title>
     <link rel="manifest" href="/manifest.json">
     <link rel="icon" href="/icon-512.png" type="image/png">
-     <meta name="description" content="なおまの研究所についてのお知らせを掲載しています。">
+    <link rel="canonical" href="https://naomasite.vercel.app/info">
+    <meta name="description" content="なおまの研究所についてのお知らせを掲載しています。">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script type="application/ld+json">
