--- a/privacy.html
+++ b/privacy.html
@@ -6,6 +6,7 @@
     <title>なおまの研究所 - 規約・ポリシー</title>
     <link rel="manifest" href="/manifest.json">
     <link rel="icon" href="/icon-512.png" type="image/png">
+    <link rel="canonical" href="https://naomasite.vercel.app/privacy">
     <meta name="description" content="利用規約とプライバシーポリシーを掲載しています。">
 
     <script type="application/ld+json">
