--- a/index.html
+++ b/index.html
@@ -112,6 +112,18 @@
     body.light-mode .research-nav a {
         border: 1px solid #d0d7de !important;
     }
+    .research-nav {
+    display: flex !important;
+    overflow-x: auto !important; /* ★横にはみ出してもスクロール可能に */
+    white-space: nowrap !important; /* ★勝手に改行させない */
+    justify-content: flex-start !important; /* ★左詰めに変更 */
+    padding: 10px 15px !important;
+    -webkit-overflow-scrolling: touch; /* ★スマホでの操作を滑らかに */
+}
+
+/* スクロールバーを隠す隠蔽工作 */
+.research-nav::-webkit-scrollbar { display: none; }
+    
 </style>
     <div class="container">
         <div class="mode-toggle">
