--- a/info.html
+++ b/info.html
@@ -141,7 +141,7 @@
         <div class="news-box">
             <h3 style="margin: 0 0 15px 0;">🔐 研究所通達</h3>
             <div id="announcement-list">
-                <p>読み込み中...</p>
+                <p>なおまの研究所に関する重要な通達と、最新の研究報告をリアルタイムで公開しています。読み込みが完了するまで少々お待ちください...</p>
             </div>
         </div>
     </div>
