--- a/info.html
+++ b/info.html
@@ -142,10 +142,7 @@
             <h3 style="margin: 0 0 15px 0;">🔐 研究所通達</h3>
             <h2>現在、システム障害はありません。</h2>
             <div id="announcement-list">
-                <p>なおまの研究所に関する重要な通達と、最新の研究報告をリアルタイムで公開しています。読み込みが完了するまで少々お待ちください...あああああああああああああああああああああああああああああああ
-                ああああああああああああああああああああああああああああああああああああああああああああああああああああああ
-                ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ
-                あああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ</p>
+                <p>なおまの研究所に関する重要な通達と、最新の研究報告をリアルタイムで公開しています。読み込みが完了するまで少々お待ちください...</p>
             </div>
         </div>
     </div>
