--- a/info.html
+++ b/info.html
@@ -142,7 +142,13 @@
             <h3 style="margin: 0 0 15px 0;">🔐 研究所通達</h3>
             <h2>現在、システム障害はありません。</h2>
             <div id="announcement-list">
-                <p>なおまの研究所に関する重要な通達と、最新の研究報告をリアルタイムで公開しています。読み込みが完了するまで少々お待ちください...</p>
+                <div style="padding: 10px; line-height: 1.8;">
+        <p>なおまの研究所・広報部より、最新のシステム稼働状況および研究成果を報告いたします。</p>
+        <p>当研究所では、Firebase技術を用いたリアルタイムな情報配信を試験的に導入しており、
+           第2研究所の進捗や、全ページに適用された最新の防衛術式（ナビゲーション・アップデート）
+           に関する詳細なログを順次公開していく予定です。
+           情報の完全な同期まで、しばらくお待ちください...</p>
+    </div>
             </div>
         </div>
     </div>
