--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 </head>
 <body id="castle-body">
   <nav class="research-nav">
-    <a href="index.html">トップページ</a>
-    <a href="info.html">お知らせ</a>
-    <a href="kenkyu-2.html">第２研究所</a>
-    <a href="privacy.html">規約・ポリシー</a>
-    <a href="https://forms.gle/7Xu1ifoCHk3qoMfx5">お問い合わせ</a>
+    <a href="index">トップページ</a>
+    <a href="info">お知らせ</a>
+    <a href="kenkyu-2">第２研究所</a>
+    <a href="privacy">規約・ポリシー</a>
+    <a href="contact">お問い合わせ</a>
 </nav>
 
 <style>
@@ -146,7 +146,7 @@
             <button id="toggle-btn" onclick="toggleMode()">🌙 Mode Switch</button>
         </div>
 
-        <h4 class="memo"><a href="kenkyu-2.html">現在開発途中（第2研究所へ）</a></h4>
+        <h4 class="memo"><a href="kenkyu-2">現在開発途中（第2研究所へ）</a></h4>
 
         <header>
             <h1>> NAOMA_DEVELOPMENT_LOG</h1>
@@ -569,7 +569,7 @@
 
     <div style="display: flex; justify-content: center; align-items: center; gap: 20px; flex-wrap: wrap; margin-top: 30px;">
     
-    <a href="https://forms.gle/RhczXnx8noG16TGD7" style="color: #999; text-decoration: none; font-family: sans-serif; letter-spacing: 1px; transition: 0.3s;">
+    <a href="https://contact" style="color: #999; text-decoration: none; font-family: sans-serif; letter-spacing: 1px; transition: 0.3s;">
         お問い合わせフォーム
     </a>
 
