--- a/index.html
+++ b/index.html
@@ -569,15 +569,11 @@
 
     <div style="display: flex; justify-content: center; align-items: center; gap: 20px; flex-wrap: wrap; margin-top: 30px;">
     
-    <a href="https://contact" style="color: #999; text-decoration: none; font-family: sans-serif; letter-spacing: 1px; transition: 0.3s;">
+    <a href="contact" style="color: #999; text-decoration: none; font-family: sans-serif; letter-spacing: 1px; transition: 0.3s;">
         お問い合わせフォーム
     </a>
-
-    <a href="https://forms.gle/mqBcoGeCvTnsmWEc8" style="color: #999; text-decoration: none; font-family: sans-serif; letter-spacing: 1px; transition: 0.3s;">
-        バグ（問題）報告
-    </a>
     
-    <a href="privacy.html" style="color: #999; text-decoration: none; font-size: 0.85rem; font-family: sans-serif; letter-spacing: 1px; transition: 0.3s;">
+    <a href="privacy" style="color: #999; text-decoration: none; font-size: 0.85rem; font-family: sans-serif; letter-spacing: 1px; transition: 0.3s;">
         利用規約・プライバシーポリシー
     </a>
 
