--- a/kenkyu-2.html
+++ b/kenkyu-2.html
@@ -113,7 +113,7 @@
         <a href="info.html">お知らせ</a>
         <a href="kenkyu-2.html">第２研究所</a>
         <a href="privacy.html">規約・ポリシー</a>
-        <a href="https://forms.gle/7Xu1ifoCHk3qoMfx5">お問い合わせ</a>
+        <a href="contact.html">お問い合わせ</a>
     </nav>
     
     <div class="main-content">
