--- a/info.html
+++ b/info.html
@@ -130,7 +130,7 @@
         <a href="info.html" class="nav-btn">お知らせ</a>
         <a href="kenkyu-2.html" class="nav-btn">第2研究所</a>
         <a href="privacy.html" class="nav-btn">規約・ポリシー</a>
-        <a href="https://forms.gle/7pj1QSx88db1fuba8" class="nav-btn" target="_blank">お問い合わせ</a>
+        <a href="contact.html" class="nav-btn" target="_blank">お問い合わせ</a>
         
         <button class="nav-btn" id="theme-toggle">
             <span style="margin-right:8px">🌙</span>モード切替
