--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   "@context": "https://schema.org",
   "@type": "WebSite",
   "name": "なおまの研究所",
-  "url": "https://naoma-lab-2.vercel.app/"
+  "url": "https://naomasite.vercel.app/"
 }
 </script>
     <link rel="canonical" href="https://naomasite.vercel.app/">
