--- a/403.html
+++ b/403.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>なおまの研究所 - 403</title>
     <link rel="manifest" href="/manifest.json">
-    <link rel="icon" href="/icon-512.png" type="image/png">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <meta name="robots" content="noindex, nofollow">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-VBTG2MXGGX"></script>
     <script>
