--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>なおまの研究所 - お問い合わせ</title>
     <link rel="manifest" href="/manifest.json" />
-    <link rel="icon" href="/icon-512.png" type="image/png" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="canonical" href="https://naomasite.vercel.app/contact" />
     <meta name="description" content="なおまの研究所へのお問い合わせを受け付けています。" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
