--- a/kenkyu-2.html
+++ b/kenkyu-2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>なおまの第２研究所</title>
     <link rel="manifest" href="/manifest.json">
-    <link rel="icon" href="/icon-512.png" type="image/png">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="canonical" href="https://naomasite.vercel.app/kenkyu-2">
     <meta name="robots" content="index, follow">
     <meta name="description" content="JavaScriptによるマウス追跡やキーログ保存、アクセス端末の解析などを行う『なおまの第2研究所』。ブラウザの限界に挑む技術デモを公開中。">
