--- a/privacy.html
+++ b/privacy.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>なおまの研究所 - 規約・ポリシー</title>
     <link rel="manifest" href="/manifest.json">
-    <link rel="icon" href="/icon-512.png" type="image/png">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="canonical" href="https://naomasite.vercel.app/privacy">
     <meta name="description" content="利用規約とプライバシーポリシーを掲載しています。">
 
