--- a/privacy.html
+++ b/privacy.html
@@ -193,7 +193,7 @@
 
         <div style="text-align: center;">
         <h4>
-  <a href="https://forms.gle/ZLJb7Y3YHgBiNNSg6" 
+  <a href="contact" 
      style="color: #58a6ff; padding: 5px 10px; border-radius: 5px; text-decoration: none; font-weight: bold;">
      お問い合わせフォームはこちら
   </a>
